2019-05-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-beta01: Becoming';git push
	git tag -a 4.8.0-beta01	-m 'ncremap se2se/fv2fv, no_stdin, vrt_fl, xcl_var, ;ncclimo job_nbr, OMP_PROC_BIND;ncap2 no foo.nc;ncks chk_nan';git push --tags

	* nco_ntp_vrt() Move pressure calcuations into time loop

	* nco_ntp_vrt() Copy non-vertical variables only once (on first timestep)

2019-05-10  Charlie Zender  <zender@uci.edu>

	* Read/write vertical variables one timestep at a time when output vertical grid is time-varying

2019-05-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha12: UCLA';git push
	git tag -a 4.8.0-alpha12 -m 'ncclimo no_stdin, aims4/acme1 NCO_PATH_OVERRIDE';git push --tags

	* Document --no_stdin

	* Add --no_stdin to ncclimo to prevent false-positive stdin detection in CWL code

2019-05-06  Charlie Zender  <zender@uci.edu>

	* Add stubs for input vertical grid timeseries

	* Add cf_grp.cdl as template/test file for CF Conventions

2019-04-30  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo add paths for aims4/acme1 to NCO_PATH_OVERRIDE section

2019-04-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha11: Jazz Fest';git push
	git tag -a 4.8.0-alpha11 -m 'NCO_PATH_OVERRIDE opt-in;job_nbr=12,OMP_PROC_BIND ncks,ncra;ncclimo/ncremap --xcl_var;documentation';git push --tags

	* ncremap --vrt_fl now obeys --vars=var_lst

	* Document --xcl_var

	* ncremap/ncclimo Fix --nco_opt to not overwrite filetype choice

	* ncremap/ncclimo --xcl_var toggles extraction list to exclusion list

2019-04-23  Charlie Zender  <zender@uci.edu>

	* ncremap, ncclimo set OMP_PROC_BIND=false as script environment variable to prevent MPI breakage

2019-04-22  Charlie Zender  <zender@uci.edu>

	* Change default job_nbr from 2 to var_nbr in splitter
