@@ -1,8 +1,14 @@
 2019-05-11  Charlie Zender  <zender@uci.edu>
 
-	* NCO 4.8.0-beta01 release procedure:
+	* NCO 4.8.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.8.0-beta01: Becoming';git push
 	git tag -a 4.8.0-beta01	-m 'ncremap se2se/fv2fv, no_stdin, vrt_fl, xcl_var, ;ncclimo job_nbr, OMP_PROC_BIND;ncap2 no foo.nc;ncks chk_nan';git push --tags
+
+	* NCO 4.8.0-beta01 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.8.0-beta01: Spaghetti';git push
+	git tag -a 4.8.0-beta01	-m 'vrt ntp timeseries';git push --tags
+
+	* nco_ntp_vrt() Verify that time-series interpolation works for	hybrid grids
 
 	* nco_ntp_vrt() Move pressure calcuations into time loop
 
@@ -10,7 +16,7 @@
 
 2019-05-10  Charlie Zender  <zender@uci.edu>
 
-	* Read/write vertical variables one timestep at a time when output vertical grid is time-varying
+	* Read/write vertical variables in single timeslices when output vertical grid time-varies
 
 2019-05-09  Charlie Zender  <zender@uci.edu>
 
